--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -23,6 +23,10 @@ jobs:
           RESPONSE=$(curl -s -H "Authorization: token ${{ secrets.GH_PAT }}" \
             "https://api.github.com/repos/${{ github.repository }}/code-scanning/alerts")
 
+          # Log the raw response for debugging purposes
+          echo "Raw Response from GitHub API:"
+          echo "$RESPONSE"
+
           # Check if the response is empty
           if [[ -z "$RESPONSE" ]]; then
             echo "Error: No response received from GitHub API."
@@ -39,12 +43,10 @@ jobs:
           # Check if the response contains valid JSON
           echo "$RESPONSE" | jq . || { echo "Error: Invalid JSON response from GitHub API"; exit 1; }
 
-          # Log the raw response for debugging purposes
-          echo "Raw Response from GitHub API:"
-          echo "$RESPONSE"
-
           # Loop through each alert and create an issue for each one
           ALERT_COUNT=$(echo "$RESPONSE" | jq '. | length')
+          echo "Total Alerts: $ALERT_COUNT"
+
           if [ "$ALERT_COUNT" -gt 0 ]; then
             echo "Code Scanning Alerts found! Creating issues..."
 
@@ -59,6 +61,9 @@ jobs:
                 start_line: .locations[0].physicalLocation.region.startLine
               }' | while read alert; do
 
+              # Log the alert details
+              echo "Alert details: $alert"
+
               # Extract values for title and body from the alert
               RULE_NAME=$(echo $alert | jq -r '.rule_name')
               MESSAGE=$(echo $alert | jq -r '.message')
@@ -66,6 +71,15 @@ jobs:
               ALERT_URL=$(echo $alert | jq -r '.alert_url')
               LOCATION=$(echo $alert | jq -r '.location')
               START_LINE=$(echo $alert | jq -r '.start_line')
+
+              # Log extracted values for debugging
+              echo "Extracted Values:"
+              echo "RULE_NAME: $RULE_NAME"
+              echo "MESSAGE: $MESSAGE"
+              echo "SEVERITY: $SEVERITY"
+              echo "ALERT_URL: $ALERT_URL"
+              echo "LOCATION: $LOCATION"
+              echo "START_LINE: $START_LINE"
 
               # Format the issue title and body
               ISSUE_TITLE="Fix code scanning alert - $RULE_NAME"
