--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -41,9 +41,9 @@ jobs:
           fi
 
           # Check if the response contains valid JSON
-          echo "$RESPONSE" | jq . || { echo "Error: Invalid JSON response from GitHub API"; exit 1; }
+          echo "$RESPONSE" | jq . > /dev/null || { echo "Error: Invalid JSON response from GitHub API"; exit 1; }
 
-          # Loop through each alert and create an issue for each one
+          # Get the total number of alerts
           ALERT_COUNT=$(echo "$RESPONSE" | jq '. | length')
           echo "Total Alerts: $ALERT_COUNT"
 
@@ -91,6 +91,7 @@ jobs:
               Tracking issue for:\n- [ ] $ALERT_URL"
               
               # Create GitHub issue with the extracted data
+              echo "Creating issue with title: $ISSUE_TITLE"
               curl -X POST -H "Authorization: token ${{ secrets.GH_PAT }}" \
                 -d "{\"title\":\"$ISSUE_TITLE\", \"body\":\"$ISSUE_BODY\", \"labels\":[\"security\"]}" \
                 https://api.github.com/repos/${{ github.repository }}/issues
