--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -1,4 +1,4 @@
-name: Code Scanning Alerts to Issues
+name: Auto Create Issues from Code Scanning Alerts
 
 on:
   push:
@@ -6,8 +6,7 @@ on:
       - main
 
 permissions:
-  actions: write
-  issues: write  # Allows creating issues
+  issues: write
   security-events: read
 
 jobs:
@@ -19,15 +18,11 @@ jobs:
 
       - name: Fetch code scanning alerts from GitHub API
         run: |
-          # Fetch the latest code scanning alerts from GitHub API
+          # Fetch code scanning alerts from the GitHub API
           RESPONSE=$(curl -s -H "Authorization: token ${{ secrets.GH_PAT }}" \
             "https://api.github.com/repos/${{ github.repository }}/code-scanning/alerts")
 
-          # Log the raw response for debugging purposes
-          echo "Raw Response from GitHub API:"
-          echo "$RESPONSE"
-
-          # Check if the response is empty
+          # Check if the response is empty or invalid
           if [[ -z "$RESPONSE" ]]; then
             echo "Error: No response received from GitHub API."
             exit 1
@@ -40,9 +35,6 @@ jobs:
             exit 1
           fi
 
-          # Check if the response is valid JSON
-          echo "$RESPONSE" | jq . > /dev/null || { echo "Error: Invalid JSON response from GitHub API"; exit 1; }
-
           # Get the total number of alerts
           ALERT_COUNT=$(echo "$RESPONSE" | jq '. | length')
           echo "Total Alerts: $ALERT_COUNT"
@@ -50,7 +42,7 @@ jobs:
           if [ "$ALERT_COUNT" -gt 0 ]; then
             echo "Code Scanning Alerts found! Creating issues..."
 
-            # Loop through each alert and extract details
+            # Loop through each alert and extract relevant details
             echo "$RESPONSE" | jq -r '.[] | 
               {
                 rule_name: .rule.name,
@@ -61,9 +53,6 @@ jobs:
                 start_line: .locations[0].physicalLocation.region.startLine
               }' | while read alert; do
 
-              # Log the alert details
-              echo "Alert details: $alert"
-
               # Extract values for title and body from the alert
               RULE_NAME=$(echo $alert | jq -r '.rule_name')
               MESSAGE=$(echo $alert | jq -r '.message')
@@ -71,15 +60,6 @@ jobs:
               ALERT_URL=$(echo $alert | jq -r '.alert_url')
               LOCATION=$(echo $alert | jq -r '.location')
               START_LINE=$(echo $alert | jq -r '.start_line')
-
-              # Log extracted values for debugging
-              echo "Extracted Values:"
-              echo "RULE_NAME: $RULE_NAME"
-              echo "MESSAGE: $MESSAGE"
-              echo "SEVERITY: $SEVERITY"
-              echo "ALERT_URL: $ALERT_URL"
-              echo "LOCATION: $LOCATION"
-              echo "START_LINE: $START_LINE"
 
               # Format the issue title and body
               ISSUE_TITLE="Fix code scanning alert - $RULE_NAME"
@@ -90,8 +70,7 @@ jobs:
               **Start Line**: $START_LINE\n\n
               Tracking issue for:\n- [ ] $ALERT_URL"
               
-              # Create GitHub issue with the extracted data
-              echo "Creating issue with title: $ISSUE_TITLE"
+              # Create the issue using GitHub's REST API
               curl -X POST -H "Authorization: token ${{ secrets.GH_PAT }}" \
                 -d "{\"title\":\"$ISSUE_TITLE\", \"body\":\"$ISSUE_BODY\", \"labels\":[\"security\"]}" \
                 https://api.github.com/repos/${{ github.repository }}/issues
