--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -35,34 +35,39 @@ jobs:
       - name: Create issues for code scanning alerts
         if: success() # Only runs if previous steps succeed
         run: |
-          # List all code scanning alerts from GitHub's built-in functionality
+          # Fetch the code scanning alerts from GitHub Security
           ALERTS=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             "https://api.github.com/repos/${{ github.repository }}/code-scanning/alerts")
 
-          # Check if we have code scanning alerts
-          if [ -n "$ALERTS" ]; then
+          # Check if the response is empty or not
+          if [[ -z "$ALERTS" ]]; then
+            echo "Error: No response or no alerts found from GitHub API."
+            exit 1
+          fi
+
+          # Count the number of alerts
+          TOTAL_ALERTS=$(echo "$ALERTS" | grep -o '"rule":' | wc -l)
+
+          if [ "$TOTAL_ALERTS" -gt 0 ]; then
             echo "Code scanning alerts found. Creating issues..."
 
-            # Loop through each alert to create an issue for it
-            echo "$ALERTS" | jq -r '.[] | 
-              {
-                rule_name: .rule.name,
-                message: .message.text,
-                severity: .severity,
-                alert_url: .html_url
-              }' | while read alert; do
+            # Loop through the alerts and create issues
+            echo "$ALERTS" | while read -r line; do
+              # Extract relevant fields from the raw JSON data
+              if [[ "$line" =~ '"rule":' ]]; then
+                RULE_NAME=$(echo "$line" | sed -n 's/.*"name": "\(.*\)",/\1/p')
+                MESSAGE=$(echo "$line" | sed -n 's/.*"message": { "text": "\(.*\)" }/\1/p')
+                SEVERITY=$(echo "$line" | sed -n 's/.*"severity": "\(.*\)"/\1/p')
+                ALERT_URL=$(echo "$line" | sed -n 's/.*"html_url": "\(.*\)"/\1/p')
 
-              RULE_NAME=$(echo $alert | jq -r '.rule_name')
-              MESSAGE=$(echo $alert | jq -r '.message')
-              SEVERITY=$(echo $alert | jq -r '.severity')
-              ALERT_URL=$(echo $alert | jq -r '.alert_url')
+                ISSUE_TITLE="Fix code scanning alert - $RULE_NAME"
+                ISSUE_BODY="**Severity**: $SEVERITY\n**Message**: $MESSAGE\n\nTracking issue for:\n- [ ] $ALERT_URL"
 
-              ISSUE_TITLE="Fix code scanning alert - $RULE_NAME"
-              ISSUE_BODY="**Severity**: $SEVERITY\n**Message**: $MESSAGE\n\nTracking issue for:\n- [ ] $ALERT_URL"
-
-              curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-                -d "{\"title\":\"$ISSUE_TITLE\", \"body\":\"$ISSUE_BODY\", \"labels\":[\"security\"]}" \
-                https://api.github.com/repos/${{ github.repository }}/issues
+                # Create an issue using GitHub's API
+                curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+                  -d "{\"title\":\"$ISSUE_TITLE\", \"body\":\"$ISSUE_BODY\", \"labels\":[\"security\"]}" \
+                  https://api.github.com/repos/${{ github.repository }}/issues
+              fi
             done
           else
             echo "No code scanning alerts found."
