--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -38,6 +38,10 @@ jobs:
           # Fetch the code scanning alerts from GitHub Security
           ALERTS=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             "https://api.github.com/repos/${{ github.repository }}/code-scanning/alerts")
+          
+          # Print the full alert response for debugging purposes
+          echo "Fetched code scanning alerts:"
+          echo "$ALERTS"
 
           # Check if the response contains alerts
           ALERT_COUNT=$(echo "$ALERTS" | jq 'length')
@@ -47,7 +51,8 @@ jobs:
 
             # Loop through each alert
             echo "$ALERTS" | jq -c '.[]' | while read -r alert; do
-              RULE_NAME=$(echo "$alert" | jq -r '.rule.name')  # Get the rule name instead of id
+              # Extract rule name, message, severity, and URL
+              RULE_NAME=$(echo "$alert" | jq -r '.rule.name')  # Get the rule name
               MESSAGE=$(echo "$alert" | jq -r '.message.text')  # Get the alert message text
               SEVERITY=$(echo "$alert" | jq -r '.severity')    # Get the severity (high, medium, low)
               ALERT_URL=$(echo "$alert" | jq -r '.html_url')    # Get the URL to the alert on GitHub
