--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -51,21 +51,12 @@ jobs:
 
             # Loop through each alert
             echo "$ALERTS" | jq -c '.[]' | while read -r alert; do
-              # Print the raw alert data for each one
-              echo "Alert data: $alert"
-              
-              # Extract rule name, message, severity, and URL
+              # Extract rule name and URL
               RULE_NAME=$(echo "$alert" | jq -r '.rule.name')  # Get the rule name
-              MESSAGE=$(echo "$alert" | jq -r '.message.text')  # Get the alert message text
-              SEVERITY=$(echo "$alert" | jq -r '.severity')    # Get the severity (high, medium, low)
               ALERT_URL=$(echo "$alert" | jq -r '.html_url')    # Get the URL to the alert on GitHub
 
-              # Check if the severity or message is null (if so, default to 'Unknown')
-              SEVERITY=${SEVERITY:-"Unknown"}  # Default to "Unknown" if severity is null or empty
-              MESSAGE=${MESSAGE:-"No message provided"}  # Default if message is empty or null
-
               ISSUE_TITLE="Fix code scanning alert - $RULE_NAME"
-              ISSUE_BODY="**Severity**: $SEVERITY\n**Message**: $MESSAGE\n\nTracking issue for:\n- [ ] $ALERT_URL"
+              ISSUE_BODY="Tracking issue for:\n- [ ] $ALERT_URL"
 
               # Create an issue using GitHub's API
               curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
