--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -55,30 +55,22 @@ jobs:
               RULE_NAME=$(echo "$alert" | jq -r '.rule.name')  # Get the rule name
               ALERT_URL=$(echo "$alert" | jq -r '.html_url')    # Get the URL to the alert on GitHub
 
-              # Construct the issue body with more interactivity
-              ISSUE_BODY="
-### 🚨 Code Scanning Alert - $RULE_NAME
+              # Create a simple, concise issue body with proper multiline string formatting
+              ISSUE_BODY="|
+                         ### 🚨 Code Scanning Alert - $RULE_NAME
 
-A potential vulnerability has been identified in your code.
+                         A potential vulnerability has been identified in your code.
 
-#### Details:
-- **Alert URL**: [$ALERT_URL]($ALERT_URL)
-- **Rule Name**: $RULE_NAME
+             - **Rule Name**: $RULE_NAME
+             - **Alert URL**: [$ALERT_URL]($ALERT_URL)
 
-#### Suggested Action:
-- Review the [alert details on GitHub](https://github.com/${{ github.repository }}/security/code-scanning/alerts) for more information.
-- Fix the issue by addressing the identified vulnerability.
+                         #### Action Items:
+             - [ ] Investigate the alert.
+             - [ ] Fix the identified vulnerability.
+             - [ ] Re-run security scans to verify the fix.
 
-#### Action Items:
-- [ ] Investigate the code at the provided URL.
-- [ ] Apply the necessary fix or mitigation.
-- [ ] Re-run security scans to verify the fix.
+                         Thank you for addressing this security issue! "
 
-#### Additional Resources:
-- [Snyk documentation](https://snyk.io/docs/) for more details on resolving vulnerabilities.
-
-Please ensure the vulnerability is resolved at the earliest. Thank you for maintaining the security of the project!
-"
 
               ISSUE_TITLE="Fix code scanning alert - $RULE_NAME"
 
